# icpc_book

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: README.md
src/range_queries/: generic_segment_tree.cpp  generic_segment_tree.h
tests/: max_segment_tree.cc  xor_segment_tree.cc
